<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_clients">

    <fragment
        android:id="@+id/navigation_clients"
        android:name="com.psdemo.globomanticssales.ui.clients.ClientsFragment"
        android:label="@string/title_clients"
        tools:layout="@layout/fragment_clients">
        <action
            android:id="@+id/openClient"
            app:destination="@id/navigation_client"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/navigation_clients" />
    </fragment>

    <fragment
        android:id="@+id/navigation_client"
        android:name="com.psdemo.globomanticssales.ui.client.ClientFragment"
        android:label="@string/title_client_details"
        tools:layout="@layout/fragment_client">

        <argument
            android:name="client_id"
            android:defaultValue='0'
            app:argType="integer" />

    </fragment>

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.psdemo.globomanticssales.ui.add.AddFragment"
        android:label="@string/title_add_client"
        tools:layout="@layout/fragment_add">
        <action
            android:id="@+id/backToClients"
            app:destination="@id/navigation_clients" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.psdemo.globomanticssales.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>
