<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clientDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.client.ClientFragment">

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Client" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="0dp"
        android:paddingEnd="4dp"
        android:text="@string/date_label"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        app:layout_constraintRight_toLeftOf="@id/date"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:textAlignment="textEnd"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        tools:text="@tools:sample/date/mmddyy" />

    <TextView
        android:id="@+id/orderLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:text="@string/order"
        android:textAppearance="@android:style/TextAppearance.Material.Caption"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date" />

    <TextView
        android:id="@+id/order"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:textAppearance="@android:style/TextAppearance.Material.Body1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orderLabel"
        tools:text="Order" />

    <TextView
        android:id="@+id/termsLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:text="@string/terms"
        android:textAppearance="@android:style/TextAppearance.Material.Caption"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order" />

    <TextView
        android:id="@+id/terms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:textAppearance="@android:style/TextAppearance.Material.Body1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/termsLabel"
        tools:text="Terms" />

    <TextView
        android:id="@+id/filesLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:text="@string/files"
        android:textAppearance="@android:style/TextAppearance.Material.Caption"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/terms" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnProposal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proposal_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filesLabel" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/picture_button"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filesLabel" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listFiles"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnProposal"
        tools:itemCount="5"
        tools:listitem="@layout/file_item" />

</androidx.constraintlayout.widget.ConstraintLayout>